# root

./: .gitignore  CMakeLists.txt
cmake/modules/: CheckCompiler.cmake  RootBuildOptions.cmake  SearchInstalledSoftware.cmake
documentation/primer/macros/: ExampleMacro  ExampleMacro.root  macro1_C_ACLiC_dict_rdict.pcm  my_rootfile.root
hist/hist/: CMakeLists.txt
hist/hist/inc/: TH1.h  TH2.h  TH3.h
hist/hist/src/: TAxis.cxx  TH1.cxx  TH2.cxx  TH3.cxx
math/: CMakeLists.txt
math/experimental/: CMakeLists.txt
math/experimental/inc/: MathUtil.h
math/experimental/src/: MathUtil-impl.cxx  MathUtil.cxx
math/genvector/: CMakeLists.txt
math/genvector/inc/Math/GenVector/: 3DConversions.h  AccHeaders.h  AxisAngle.h  Cartesian2D.h  Cartesian3D.h  Cylindrical3D.h  CylindricalEta3D.h  DisplacementVector2D.h  DisplacementVector3D.h  EulerAngles.h  LorentzRotation.h  LorentzVector.h  MathHeaders.h  MathUtil.h  Plane3D.h  Polar2D.h  Polar3D.h  PositionVector2D.h  PositionVector3D.h  PtEtaPhiE4D.h  PtEtaPhiM4D.h  PxPyPzE4D.h  PxPyPzM4D.h  Quaternion.h  Rotation3D.h  RotationX.h  RotationY.h  RotationZ.h  RotationZYX.h  Transform3D.h  Translation3D.h  VectorUtil.h  eta.h  etaMax.h
math/genvector/src/: 3DConversions.cxx  AxisAngle.cxx  AxisAngleXother.cxx  Boost.cxx  BoostX.cxx  BoostY.cxx  BoostZ.cxx  EulerAngles.cxx  LorentzRotation.cxx  Quaternion.cxx  Rotation3D.cxx  Rotation3DxAxial.cxx  RotationZYX.cxx
math/genvector/test/: CMakeLists.txt  testGenVectorSYCL.cxx
math/matrix/inc/: TMatrixTSym.h
math/matrix/src/: TDecompSparse.cxx
mytest/: HiggsAnalysis  HiggsAnalysis.cpp  HistoFill  HistoFill.cpp  graph.txt  histond_benchmark  histond_benchmark.cpp  histond_benchmark.py
roofit/roofitcore/test/TestStatistics/: testLikelihoodJob.cxx  testLikelihoodSerial.cxx
tree/: CMakeLists.txt
tree/dataframe/: CMakeLists.txt
tree/dataframe/inc/: LinkDef.h
tree/dataframe/inc/ROOT/: RDataFrame.hxx  RDataSource.hxx  RNTupleDS.hxx
tree/dataframe/inc/ROOT/RDF/: ActionHelpers.hxx  CUDAFillHelper.hxx  ColumnReaderUtils.hxx  InterfaceUtils.hxx  RAction.hxx  RActionBase.hxx  RBulkDynamicArrayReader.hxx  RBulkReaderBase.hxx  RBulkScalarReader.hxx  RBulkStaticArrayReader.hxx  RColumnReaderBase.hxx  RDSColumnReader.hxx  RDefine.hxx  RDefinePerSample.hxx  RDefineReader.hxx  RDefineSYCL.hxx  REventMask.hxx  RFilter.hxx  RInterface.hxx  RInterfaceBase.hxx  Utils.hxx  (+13 more)
tree/dataframe/src/: RBulkReaderBase.cxx  RDataFrame.cxx  RDefineBase.cxx  RJittedAction.cxx  RLoopManager.cxx  RNTupleDS.cxx  RTrivialDS.cxx  RVariationBase.cxx
tree/dataframe/test/: CMakeLists.txt  RArraysDS.hxx  dataframe_bulk_api.cxx  dataframe_nodes.cxx  dataframe_snapshot.cxx
tree/experimental/: CMakeLists.txt
tree/experimental/inc/: AxisDescriptor.h  CUDAHelpers.cuh  InvariantMass.h  InvariantMassCUDA.h  InvariantMassSYCL.h  RDefH1SYCL.h  RDefKernel.h  RDefSYCL.h  RHnCUDA.h  RHnSYCL.h  SYCLHelpers.h
tree/experimental/src/: InvariantMassCUDA.cu  InvariantMassSYCL.cxx  RDefH1SYCL-impl.cxx  RDefH1SYCL.cxx  RDefKernel.cxx  RDefSYCL-impl.cxx  RDefSYCL.cxx  RHnCUDA-impl.cu  RHnCUDA.cu  RHnSYCL-impl.cxx  RHnSYCL.cxx
tree/experimental/test/: CMakeLists.txt  Def.cxx  DefHistoFill.cxx  DefRDF.cxx  InvariantMassesHistoFill.cxx  histoFill.cxx  histoFillSYCL.cxx  histoRDF.cxx  invariantMass.cxx
tree/tree/inc/: TTree.h
tree/tree/inc/ROOT/: InternalTreeUtils.hxx
tree/tree/src/: TTree.cxx
